# logistics-ai-bot

./: .env  .gitignore  README.md  main.py  pyproject.toml  run_planner.py  run_responder.py
backend/: .env  .gitignore  api.py  check_setup.py  main.py  pyproject.toml
backend/benchmarks/: QUICKSTART.md  README.md  benchmark_results_20251215_141835.json  performance_test.py
backend/src/: insights_service.py  llm.py  mock_llm.py  responder.py  tools.py
backend/src/kafka_utils/: avro_schemas.py  avro_serializer.py  config.py  consumer.py  producer.py
db/: db_create.sql  db_drop_tables.sql  db_sample_data_insert.sql  db_tables_create.sql
fe-react/src/: App.css  App.tsx
fe-react/src/components/: InsightsPanel.css  InsightsPanel.tsx
fe-react/src/utils/: formatMessage.tsx
src/: llm.py  models.py  order_api.py  order_service.py  planner.py
src/kafka_utils/: __init__.py  config.py  connection_manager.py  consumer.py  producer.py
